[tool.poetry]
name = "django-clacks"
version = "0.1.0"
description = "The unseen, silent tribute to those we have lost."
authors = [
  "David Cooke <me@dave.lc>",
  "Jeremiah Boby <mail@jeremiahboby.me>",
  "Ben Griffiths <sendbenspam@yahoo.co.uk>"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
