[tool.poetry]
name = "django-clacks"
version = "0.3.0"
readme = "README.md"
description = "The unseen, silent tribute to those we have lost."
authors = [
  "David Cooke <me@dave.lc>",
  "Jeremiah Boby <mail@jeremiahboby.me>",
  "Ben Griffiths <sendbenspam@yahoo.co.uk>"
]
packages = [
  { include = "clacks" }
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
